--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "composer/installers": "^1.9",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
-        "drupal/core-recommended": "^9.1"
+        "drupal/core-recommended": "^9.1",
+        "drupal/devel": "^4.1",
+        "drupal/features": "^3.12"
     },
     "conflict": {
         "drupal/drupal": "*"
