--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -35,6 +35,19 @@ buddy.at_entry_edit_form:
     parameters:
       atEntry:
         type: entity:node
+buddy.at_entry_delete_form:
+  path: '/delete-at-entry/{atEntry}'
+  defaults:
+    _form:  '\Drupal\buddy\Form\ATEntryDeleteForm'
+    _title: 'AT Entry Form'
+  requirements:
+    _permission: 'access content'
+    _custom_access:  '\Drupal\buddy\Controller\ATProviderController::access'
+    _entity_bundles: 'atEntry:at_entry'
+  options:
+    parameters:
+      atEntry:
+        type: entity:node
 buddy.type_create_form:
   path: '/create-type/{atEntry}'
   defaults:
@@ -61,6 +74,19 @@ buddy.platform_edit_form:
     parameters:
       type:
         type: entity:node
+buddy.platform_delete_form:
+  path: '/delete-type/{type}'
+  defaults:
+    _form: '\Drupal\buddy\Form\ATTypeDeleteForm'
+    _title: 'Delete Type'
+  requirements:
+    _permission: 'access content'
+    _custom_access:  '\Drupal\buddy\Controller\ATProviderController::access'
+    _entity_bundles: 'type:at_type_app|at_type_browser_extension|at_type_software'
+  options:
+    parameters:
+      type:
+        type: entity:node
 buddy.description_create_form:
   path: '/create-description/{atEntry}'
   defaults:
@@ -79,6 +105,19 @@ buddy.description_edit_form:
   defaults:
     _form: '\Drupal\buddy\Form\ATDescriptionEditForm'
     _title: 'Edit Description'
+  requirements:
+    _permission: 'access content'
+    _custom_access:  '\Drupal\buddy\Controller\ATProviderController::access'
+    _entity_bundles: 'description:at_description'
+  options:
+    parameters:
+      description:
+        type: entity:node
+buddy.description_delete_form:
+  path: '/delete-description/{description}'
+  defaults:
+    _form: '\Drupal\buddy\Form\ATDescriptionDeleteForm'
+    _title: 'Delete Description'
   requirements:
     _permission: 'access content'
     _custom_access:  '\Drupal\buddy\Controller\ATProviderController::access'
