--- a/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
+++ b/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
@@ -2,6 +2,8 @@ buddy_profile_wizard:
   version: 1.x
   js:
     js/phaser.js: {}
+    js/util/TextButton.js: {}
+    js/intro.js: {}
     js/math-game.js: {}
     js/memory-game.js: {}
     js/wizard.js: {}
