--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -4,7 +4,7 @@ buddy.user_entry_point:
     _form: '\Drupal\buddy\Form\UserEntryPoint'
     _title: 'Log in or register'
   requirements:
-    _permission: 'access content'
+    _role: 'anonymous'
 buddy.at_entry_overview:
   path: '/my-at-entries'
   defaults:
