^updated math game

--- a/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
+++ b/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
@@ -8,6 +8,7 @@ buddy_profile_wizard:
     js/util/scenes.js: {}
     js/intro.js: {}
     js/math-game.js: {}
+    js/reading-game.js: {}
     js/memory-game.js: {}
     js/wizard.js: {}
   dependencies:
