--- a/web/modules/buddy/buddy.libraries.yml
+++ b/web/modules/buddy/buddy.libraries.yml
@@ -8,3 +8,12 @@ at_provider_forms:
     js/at-provider.js: {}
   dependencies:
     - core/jquery
+user_profile_forms:
+  version: 1.x
+  css:
+    theme:
+      css/user-profile.css: {}
+  js:
+    js/user-profile.js: {}
+  dependencies:
+    - core/jquery
