^preference form start

--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -20,7 +20,7 @@ buddy.user_profile:
     _form: '\Drupal\buddy\Form\UserProfilePreferencesForm'
     _title: 'Create Profile'
   requirements:
-    _role: 'anonymous'
+    _user_is_logged_in: 'TRUE'
   options:
     no_cache: 'TRUE'
 buddy.at_entry_overview:
