--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/devel": "^4.1",
         "drupal/dropdown_language": "^3.0",
         "drupal/features": "^3.12",
+        "drupal/fivestar": "^1.0@alpha",
         "drupal/fontawesome_menu_icons": "^1.9",
         "drupal/mailsystem": "^4.3",
         "drupal/phpmailer_smtp": "^2.0",
