--- a/composer.json
+++ b/composer.json
@@ -95,5 +95,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drush/drush": "^10.5"
     }
 }
