--- a/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
+++ b/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
@@ -2,6 +2,7 @@ buddy_profile_wizard:
   version: 1.x
   js:
     js/translation/string-factory.js: {}
+    js/translation/sound-factory.js: {}
     js/phaser.js: {}
     js/util/gameUtil.js: {}
     js/util/data-structures.js: {}
