--- a/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
+++ b/web/modules/buddy_profile_wizard/buddy_profile_wizard.libraries.yml
@@ -16,6 +16,7 @@ buddy_profile_wizard:
     js/memory-game.js: {}
     js/memory-game-working-memory.js: {}
     js/memory-game-short-term.js: {}
+    js/focus-game.js: {}
     js/director.js: {}
     js/wizard.js: {}
   dependencies:
