--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/fivestar": "^1.0@alpha",
         "drupal/fontawesome_menu_icons": "^1.9",
         "drupal/mailsystem": "^4.3",
+        "drupal/multiple_registration": "^3.0",
         "drupal/phpmailer_smtp": "^2.0",
         "drupal/redirect_after_login": "^2.7",
         "drupal/social_auth_facebook": "^3.0",
