--- a/web/themes/custom/buddy_bt4/buddy_bt4.libraries.yml
+++ b/web/themes/custom/buddy_bt4/buddy_bt4.libraries.yml
@@ -1,5 +1,7 @@
 global-styling:
   css:
+    base:
+      '//fonts.googleapis.com/css?family=Noto+Sans:regular,bold': { external: true }
     theme:
       css/style.css: {}
       css/custom.css: {}
