--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -8,28 +8,28 @@ buddy.at_backend_overview:
   options:
     no_cache: 'TRUE'
 buddy.user_entry_point:
-  path: '/user-entry'
-  defaults:
-    _form: '\Drupal\buddy\Form\UserEntryPoint'
-    _title: 'Log in or register'
-  requirements:
-    _role: 'anonymous'
-  options:
-    no_cache: 'TRUE'
-buddy.user_login:
-  path: '/user-login'
-  defaults:
-    _form: '\Drupal\buddy\Form\BuddyUserLoginForm'
-    _title: 'Log in'
-  requirements:
-    _role: 'anonymous'
-  options:
-    no_cache: 'TRUE'
-buddy.user_register:
   path: '/user-register'
   defaults:
-    _form: '\Drupal\buddy\Form\BuddyUserRegisterForm'
-    _title: 'Register'
+    _form: '\Drupal\buddy\Form\UserRegisterForm'
+    _title: 'Welcome'
+  requirements:
+    _role: 'anonymous'
+  options:
+    no_cache: 'TRUE'
+buddy.user_register_local:
+  path: '/user-register-local'
+  defaults:
+    _form: '\Drupal\buddy\Form\UserRegisterLocalForm'
+    _title: 'Welcome'
+  requirements:
+    _role: 'anonymous'
+  options:
+    no_cache: 'TRUE'
+buddy.user_register_external:
+  path: '/user-register-external'
+  defaults:
+    _form: '\Drupal\buddy\Form\UserRegisterExternalForm'
+    _title: 'Welcome'
   requirements:
     _role: 'anonymous'
   options:
