--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/mailsystem": "^4.3",
         "drupal/phpmailer_smtp": "^2.0",
         "drupal/redirect_after_login": "^2.7",
+        "drupal/search_api": "^1.21",
         "drupal/social_auth_facebook": "^3.0",
         "drupal/social_auth_google": "^3.0@RC",
         "drupal/theme_switcher": "^1.2"
