--- a/web/modules/buddy/buddy.routing.yml
+++ b/web/modules/buddy/buddy.routing.yml
@@ -6,6 +6,15 @@ buddy.user_frontpage:
     _custom_access: '\Drupal\buddy\Controller\UserFrontPageController::access'
   options:
     no_cache: 'TRUE'
+buddy.user_search:
+  path: '/user-search'
+  defaults:
+    _form: '\Drupal\buddy\Form\UserSearchForm'
+    _title: 'Search'
+  requirements:
+    _access: 'TRUE'
+  options:
+    no_cache: 'TRUE'
 buddy.at_backend_overview:
   path: '/at-entries/overview'
   defaults:
